--- a/src/main/resources/templates/organization/confirmOrder.html
+++ b/src/main/resources/templates/organization/confirmOrder.html
@@ -7,6 +7,7 @@
     <title>Edit Order</title>
 </head>
 <body>
+<header th:replace="~{fragments/fragments :: top}"></header>
 <h1>Edit Order</h1>
 
 <form th:action="@{/confirmOrder}" method="post">
