--- a/src/main/resources/templates/fragments/productList.html
+++ b/src/main/resources/templates/fragments/productList.html
@@ -1,6 +1,6 @@
 <th:block th:fragment="productList">
     <tr th:each="availableProduct : ${availableProducts}">
-        <td><input type="checkbox" name="selectedProducts" th:value="${availableProduct.productId}" /></td>
+        <td class="checkbox"><input  type="checkbox" name="selectedProducts" th:value="${availableProduct.productId}" /></td>
         <td th:text="${availableProduct.productCode}"></td>
         <td th:text="${availableProduct.name}"></td>
         <td th:text="${availableProduct.description}"></td>
