--- a/src/main/resources/templates/editUser.html
+++ b/src/main/resources/templates/editUser.html
@@ -6,124 +6,90 @@
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/flatpickr.min.css">
     <script src="/js/flatpickr"></script>
-    <style>
-        html, body {
-            height: 100%;
-            margin: 0;
-            display: flex;
-            flex-direction: column;
-        }
-        .wrapper {
-            display: flex;
-            flex: 1;
-            overflow: hidden;
-        }
-        .content-container {
-            flex: 1;
-            display: flex;
-            flex-direction: column;
-            overflow: hidden;
-        }
-        .fixed-footer {
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-            background: #f1f1f1;
-            padding: 10px;
-            text-align: center;
-        }
-
-        .fixed-header {
-            position: fixed;
-            top: 0;
-            width: 100%;
-            background: #f1f1f1;
-            padding: 10px;
-            text-align: center;
-        }
-    </style>
+    <link rel="stylesheet" href="/css/admin.css" th:href="@{/css/admin.css}">
 </head>
 <body>
 <header class="fixed-header" th:replace="~{fragments/fragments :: top}"></header>
 <div class="wrapper">
 
     <div class="content-container">
-
-        <h1>Edit User page</h1>
-        <form action="/edituser" method="post" id="userForm">
-            <input type="hidden" name="_csrf" th:value="${_csrf.token}">
-            <input type="hidden" name="id" th:value="${edituser.getUserId()}">
-            <table>
-                <tr>
-                    <td><h5>ID</h5></td>
-                    <td><h5 th:text="${edituser.getUserId()}"></h5></td>
-                </tr>
-                <tr>
-                    <td><h5><label for="name">Name</label></h5></td>
-                    <td><input type="text" name="name" id="name" th:value="${edituser.getName()}" class="form-control">
-                    </td>
-                </tr>
-                <tr>
-                    <td><h5><label for="depts"></label>Department</h5></td>
-                    <td>
-                        <select name="department" id="depts">
-                            <option
-                                    th:each="dept : ${departments}"
-                                    th:value="${dept.getName()}"
-                                    th:text="${dept.getName()}"
-                                    th:selected="${dept.getName.equals(edituser.getDepartment().getName())}">
-                            </option>
-                        </select>
-                    </td>
-                </tr>
-                <tr>
-                    <td><h5><label for="roles"></label>Role</h5></td>
-                    <td>
-                        <select name="role" id="roles">
-                            <option
-                                    th:each="role : ${roles}"
-                                    th:value="${role.getName()}"
-                                    th:text="${role.getName()}"
-                                    th:selected="${role.getName.equals(edituser.getRole().getName())}">
-                            </option>
-                        </select>
-                    </td>
-                </tr>
-                <tr>
-                    <td><h5><label for="login">Login</label></h5></td>
-                    <td><input type="text" name="login" id="login" th:value="${edituser.getLogin()}"
-                               class="form-control"></td>
-                </tr>
-                <tr>
-                    <td><h5><label for="phone">Phone</label></h5></td>
-                    <td><input type="text" name="phone" id="phone" th:value="${edituser.getPhone()}"
-                               class="form-control"></td>
-                </tr>
-                <tr>
-                    <td><h5><label for="email">Email</label></h5></td>
-                    <td><input type="email" name="email" id="email" th:value="${edituser.getEmail()}"
-                               class="form-control"></td>
-                </tr>
-                <tr>
-                    <td>
-                        <h5><label for="datepicker">Hired at</label></h5>
-                    </td>
-                    <td>
-                        <input type="text" id="datepicker" class="form-control" name="hired_at"
-                               th:value="${#temporals.format(edituser.createdAt, 'yyyy-MM-dd')}"/>
-                    </td>
-                </tr>
-            </table>
-            <button type="submit" id="saveBtn" class="btn btn-primary mt-3" disabled>Save changes</button>
-            <button type="button" class="btn btn-danger mt-3" id="deleteBtn">Delete</button>
-        </form>
-        <form action="/">
-            <button>Discard changes</button>
-        </form>
-
+        <div class="content">
+            <h1>Edit User page</h1>
+            <form action="/edituser" method="post" id="userForm">
+                <input type="hidden" name="_csrf" th:value="${_csrf.token}">
+                <input type="hidden" name="id" th:value="${edituser.getUserId()}">
+                <table>
+                    <tr>
+                        <td><h5>ID</h5></td>
+                        <td><h5 th:text="${edituser.getUserId()}"></h5></td>
+                    </tr>
+                    <tr>
+                        <td><h5><label for="name">Name</label></h5></td>
+                        <td><input type="text" name="name" id="name" th:value="${edituser.getName()}"
+                                   class="form-control">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td><h5><label for="depts"></label>Department</h5></td>
+                        <td>
+                            <select name="department" id="depts">
+                                <option
+                                        th:each="dept : ${departments}"
+                                        th:value="${dept.getName()}"
+                                        th:text="${dept.getName()}"
+                                        th:selected="${dept.getName.equals(edituser.getDepartment().getName())}">
+                                </option>
+                            </select>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td><h5><label for="roles"></label>Role</h5></td>
+                        <td>
+                            <select name="role" id="roles">
+                                <option
+                                        th:each="role : ${roles}"
+                                        th:value="${role.getName()}"
+                                        th:text="${role.getName()}"
+                                        th:selected="${role.getName.equals(edituser.getRole().getName())}">
+                                </option>
+                            </select>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td><h5><label for="login">Login</label></h5></td>
+                        <td><input type="text" name="login" id="login" th:value="${edituser.getLogin()}"
+                                   class="form-control"></td>
+                    </tr>
+                    <tr>
+                        <td><h5><label for="phone">Phone</label></h5></td>
+                        <td><input type="text" name="phone" id="phone" th:value="${edituser.getPhone()}"
+                                   class="form-control"></td>
+                    </tr>
+                    <tr>
+                        <td><h5><label for="email">Email</label></h5></td>
+                        <td><input type="email" name="email" id="email" th:value="${edituser.getEmail()}"
+                                   class="form-control"></td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <h5><label for="datepicker">Hired at</label></h5>
+                        </td>
+                        <td>
+                            <input type="text" id="datepicker" class="form-control" name="hired_at"
+                                   th:value="${#temporals.format(edituser.createdAt, 'yyyy-MM-dd')}"/>
+                        </td>
+                    </tr>
+                </table>
+                <button type="submit" id="saveBtn" class="btn btn-primary mt-3" disabled>Save changes</button>
+                <button type="button" class="btn btn-danger mt-3" id="deleteBtn">Delete</button>
+            </form>
+            <form action="/">
+                <button class="btn btn-primary mt-3">Discard changes</button>
+            </form>
+        </div>
     </div>
 </div>
-<footer class="fixed-footer" th:replace="~{fragments/fragments :: bottom}"></footer>
+<!--<footer class="fixed-footer" th:replace="~{fragments/fragments :: bottom}"></footer>-->
 <script>
     document.addEventListener("DOMContentLoaded", function () {
         flatpickr("#datepicker", {
