--- a/src/main/resources/templates/organization/adminpage.html
+++ b/src/main/resources/templates/organization/adminpage.html
@@ -4,110 +4,7 @@
     <meta charset="UTF-8">
     <title>Admin page</title>
     <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/table.css">
-    <!--    <style>-->
-    <!--        html, body {-->
-    <!--            height: 100%;-->
-    <!--            margin: 0;-->
-    <!--            display: flex;-->
-    <!--            flex-direction: column;-->
-    <!--        }-->
-    <!--        .disabled {-->
-    <!--            color: #ccc;-->
-    <!--            pointer-events: none;-->
-    <!--        }-->
-    <!--        .wrapper {-->
-    <!--            display: flex;-->
-    <!--            flex: 1;-->
-    <!--            overflow: hidden;-->
-    <!--        }-->
-
-    <!--        .content {-->
-    <!--            flex: 1;-->
-    <!--        }-->
-
-    <!--        .fixed-footer {-->
-    <!--            position: fixed;-->
-    <!--            bottom: 0;-->
-    <!--            width: 100%;-->
-    <!--            background: #f1f1f1;-->
-    <!--            padding: 10px;-->
-    <!--            text-align: center;-->
-    <!--        }-->
-
-    <!--        .fixed-header {-->
-    <!--            position: fixed;-->
-    <!--            top: 0;-->
-    <!--            width: 100%;-->
-    <!--            background: #f1f1f1;-->
-    <!--            padding: 10px;-->
-    <!--            text-align: center;-->
-    <!--        }-->
-
-    <!--        .content-container {-->
-    <!--            flex: 1;-->
-    <!--            display: flex;-->
-    <!--            flex-direction: column;-->
-    <!--            overflow: hidden;-->
-    <!--        }-->
-
-    <!--        .right-sidebar {-->
-    <!--            width: 200px;-->
-    <!--            padding: 20px;-->
-    <!--            background: #f8f9fa;-->
-    <!--            display: flex;-->
-    <!--            flex-direction: column;-->
-    <!--            align-items: center;-->
-    <!--            justify-content: flex-end;-->
-    <!--            height: 100vh;-->
-    <!--        }-->
-
-    <!--        a {-->
-    <!--            color: black;-->
-    <!--            text-decoration: none;-->
-    <!--            cursor: pointer;-->
-    <!--        }-->
-
-    <!--        table {-->
-    <!--            width: 100%;-->
-    <!--            border-collapse: collapse;-->
-    <!--        }-->
-
-    <!--        th, td {-->
-    <!--            padding: 6px;-->
-    <!--            text-align: left;-->
-    <!--            border: 1px solid #ddd;-->
-    <!--        }-->
-
-    <!--        th {-->
-    <!--            cursor: pointer;-->
-    <!--        }-->
-
-    <!--        #pageNumber {-->
-    <!--            width: 50px;-->
-    <!--        }-->
-    <!--        .pagination-container {-->
-    <!--            display: flex;-->
-    <!--            align-items: center;-->
-    <!--            gap: 8px;-->
-    <!--        }-->
-    <!--        .pagination-container {-->
-    <!--            position: sticky;-->
-    <!--            bottom: 0;-->
-    <!--            background: #fff;-->
-    <!--            padding: 10px;-->
-    <!--            border-top: 1px solid #ddd;-->
-    <!--        }-->
-    <!--        .content {-->
-    <!--            flex: 1;-->
-    <!--            overflow-y: auto;-->
-    <!--            padding: 20px;-->
-    <!--        }-->
-    <!--        .page-form {-->
-    <!--            display: flex;-->
-    <!--            align-items: center;-->
-    <!--        }-->
-    <!--    </style>-->
+    <link rel="stylesheet" href="/css/table.css" th:href="@{/css/table.css}">
 </head>
 <body>
 <header class="fixed-header" th:replace="~{fragments/fragments :: top}"></header>
