--- a/src/main/resources/templates/organization/pageOfFinco.html
+++ b/src/main/resources/templates/organization/pageOfFinco.html
@@ -102,8 +102,8 @@
                             <span th:text="${order.user.phone}"></span></p>
                         <p><strong>Email:</strong>
                             <span th:text="${order.user.email}"></span></p>
-                        <p><strong>Created At:</strong> <span
-                                th:text="${#temporals.format(order.createdAt, 'dd.MM.yyyy HH:mm')}"></span></p>
+<!--                        <p><strong>Created At:</strong> <span-->
+<!--                                th:text="${#temporals.format(order.createdAt, 'dd.MM.yyyy HH:mm')}"></span></p>-->
 
 
                     </div>
